# ros2-eloquent-tutorial

./: README.md
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_cpp_pkg/install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  cpp_node  number_counter  number_publisher  robot_news_station  smartphone
my_cpp_pkg/install/my_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: my_cpp_pkg
my_cpp_pkg/install/my_cpp_pkg/share/my_cpp_pkg/: package.sh  package.xml
my_cpp_pkg/install/my_cpp_pkg/share/my_cpp_pkg/cmake/: my_cpp_pkgConfig.cmake
my_cpp_pkg/log/: latest_build
my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery.cpp  hardware_status_publisher.cpp  led_panel.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  hardware_status_publisher.py  led_panel.py  my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: number_app.launch.py  robot_news_app.launch.py  turtlesim_udemy.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: AvailableTurtles.msg
turtlesim_udemy_cpp/: CMakeLists.txt  package.xml
turtlesim_udemy_cpp/src/: turtle_controller.cpp  turtle_spawn.cpp
turtlesim_udemy_project/: package.xml  setup.cfg  setup.py
turtlesim_udemy_project/turtlesim_udemy_project/: turtle_controller.py  turtle_spawner.py
